Added put and delete to our movies endpoints
