# routes/moviesRoute.js
@@ -4,5 +4,7 @@ const controller = require("../controllers/moviesFunction");
 movieRouter.get("/", controller.getAll);
 movieRouter.get("/:title", controller.getByTitle);
 movieRouter.post("/", controller.createMovie);
+movieRouter.put("/:id", controller.updateMovie);
+movieRouter.delete("/:id", controller.deleteMovie);
 
 module.exports = movieRouter;
